--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1 user-scalable=no"/>
     <title>YZA Digital | Marketing y Web</title>
-    <link rel="icon"href="http://freshdesign.agency/favicon.ico">
+    <link rel="icon" src="img/favicon.ico">
 
   </head>
   <body>
@@ -332,7 +332,7 @@
 
    </script>
 
-   <link rel="stylesheet" href="css/estilos.css">
+   <link rel="stylesheet" href="css/estilos-min.css">
 
   </body>
 </html>
