--- a/index.html
+++ b/index.html
@@ -261,7 +261,28 @@
          }
        });
     </script>
+    <script src="js/blazy.js"></script>
 
+    <script type="text/javascript">
+
+         var slideIndex = 1;
+         showDivs(slideIndex);
+
+         function plusDivs(n) {
+           showDivs(slideIndex += n);
+         }
+
+         function showDivs(n) {
+           var i;
+           var x = document.getElementsByClassName("mySlides");
+           if (n > x.length) {slideIndex = 1}
+           if (n < 1) {slideIndex = x.length}
+           for (i = 0; i < x.length; i++) {
+              x[i].style.display = "none";
+           }
+           x[slideIndex-1].style.display = "block";
+         }
+    </script>
 
    <script type="text/javascript">
     var $header =document.getElementById('white');
@@ -301,27 +322,8 @@
      var blazy = new Blazy ({
        selector: '.blazys'
      });
-
-     var slideIndex = 1;
-     showDivs(slideIndex);
-
-     function plusDivs(n) {
-       showDivs(slideIndex += n);
-     }
-
-     function showDivs(n) {
-       var i;
-       var x = document.getElementsByClassName("mySlides");
-       if (n > x.length) {slideIndex = 1}
-       if (n < 1) {slideIndex = x.length}
-       for (i = 0; i < x.length; i++) {
-          x[i].style.display = "none";
-       }
-       x[slideIndex-1].style.display = "block";
-     }
-
    </script>
-   <script src="js/blazy.js"></script>
+
    <link rel="stylesheet" href="css/estilos-min.css">
 
   </body>
