--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
 
    <section id="top">
      <div class="front">
-       <video class="video"src="img/vid-1.mp4" autoplay loop poster="" >
+       <video class="video"src="img/vid-1.mp4" autoplay loop poster="bg-main.jpg">
        </video>
      </div>
 
